--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "redhat.vscode-xml",
     "Pivotal.vscode-spring-boot",
     "redhat.fabric8-analytics",
+    "gabrielbb.vscode-lombok",
     "humao.rest-client"    
   ]
 }
