--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,14 +1,14 @@
 {
   "recommendations": [
+    "redhat.java",
+    "redhat.vscode-xml",
+    "redhat.fabric8-analytics",
     "vscjava.vscode-maven",
     "vscjava.vscode-java-debug",
-    "vscjava.vscode-java-pack",
-    "redhat.java",
+    // "vscjava.vscode-java-pack",
     "SonarSource.sonarlint-vscode",
-    "afmicc.GetterAndSetterGenerator",
-    "redhat.vscode-xml",
+    // "afmicc.GetterAndSetterGenerator",
     "Pivotal.vscode-spring-boot",
-    "redhat.fabric8-analytics",
     "gabrielbb.vscode-lombok",
     "humao.rest-client",
     "yzhang.markdown-all-in-one",
