--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
+# spring:
+#   data:
+#     rest:
+#       base-path: /api
 server:
   port: 8080
   # redirect_port: 8080
+  servlet:
+    context-path: /api
 # Custom Typed Properties
 config-properties:
   foo: 1234
