added cra react typescript project

--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,11 @@
 							<goal>copy-resources</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${basedir}/target/classes/static</outputDirectory>
+							<!-- <outputDirectory>${basedir}/target/classes/static</outputDirectory> -->
+							<outputDirectory>${basedir}/src/main/resources/META-INF/resources</outputDirectory>
 							<resources>
 								<resource>
-									<directory>frontend/build</directory>
+									<directory>${project.basedir}/frontend/build</directory>
 								</resource>
 							</resources>
 						</configuration>
