--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-stomp-hooks": "^2.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.17"
