working on notes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "pasteImageToMarkdown.path": "./attachments",
   "java.configuration.updateBuildConfiguration": "automatic",
   "java.project.referencedLibraries": [
     "lib/**/*.jar",
