try fix java -jar crash after start app

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "React Frontend",
       "type": "chrome",
       "request": "launch",
-      // "url": "http://192.168.1.189:8080",
+      // "url": "http://192.168.122.149:8080",
       "url": "http://localhost:3000",
       "webRoot": "${workspaceRoot}/src",
       "userDataDir": "${workspaceRoot}/.vscode/chrome",
@@ -31,7 +31,7 @@
       "vmArgs": "-Djava.library.path=/usr/local/lib",
       // "vmArgs": "-Djava.library.path=${workspaceFolder}/libs/arm64"
       //"env": {
-      //  "LD_LIBRARY_PATH": "libs/arm64/ "
+      //  "LD_LIBRARY_PATH": "/usr/local/lib"
       //}
     },
     {
