--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,14 @@
 	<name>citizencardreaderapi</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
+		<!-- Most of the time no additional configuration is needed, everything “just works”, but in some specific cases, we may need to tell spring-boot explicitly what the main class is. One way to do it would be to add a property: -->
+		<start-class>com.solidarychain.citizencardreaderapi.Application</start-class>
+		<!-- java8 -->
+		<!-- <java.version>8</java.version> -->
+		<!-- java11 -->
 		<java.version>11</java.version>
+		<!-- java17 -->
+		<!-- <java.version>17</java.version> -->
 		<!-- react frontend -->
 		<frontend-maven-plugin.version>1.6</frontend-maven-plugin.version>
 		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
@@ -43,7 +50,8 @@
 			<artifactId>pteidlibj</artifactId>
 			<version>1.0.0</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/libs/arm64/pteidlibj.jar</systemPath>
+			<!-- <systemPath>${basedir}/libs/arm64/pteidlibj.jar</systemPath> -->
+			<systemPath>${basedir}/libs/x86_64/pteidlibj.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -69,12 +77,14 @@
 					This manifest contains a Main-Class entry that specifies which class defines the main method for your application.
 					-->
 					<executable>true</executable>
-					<excludes>
+					<!-- require to use pteidlibj with java -jar else lib not found problem -->
+					<includeSystemScope>true</includeSystemScope>
+					<!-- <excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
-					</excludes>
+					</excludes> -->
 					<!-- not require to use pteidlibj -->
 					<!-- <environmentVariables>
 						<LD_LIBRARY_PATH>/usr/local/lib</LD_LIBRARY_PATH>
@@ -82,7 +92,7 @@
 					<!-- require to use pteidlibj -->
 					<systemPropertyVariables>
 						<java.library.path>/usr/local/lib</java.library.path>
-					</systemPropertyVariables>
+					</systemPropertyVariables>					
 				</configuration>
 			</plugin>
 			<!-- react frontend -->
@@ -161,14 +171,6 @@
 				<groupId>com.github.eirslett</groupId>
 				<artifactId>frontend-maven-plugin</artifactId>
 			</plugin> -->
-			<!-- require to use pteidlibj with java -jar else lib not found problem -->
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<includeSystemScope>true</includeSystemScope>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
